FLY wire David/force-app/main/default/objects/Quote_Line_Rollup_Field_Mapping__mdt/Quote_Line_Rollup_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>SALDEV-1418
custom metadata is created to store field and average field mapping from Quote Line object.
New record can be added here to calculate average of field.</description>
    <label>Quote Line Rollup Fields Mapping</label>
    <pluralLabel>Quote Line Rollup Fields Mappings</pluralLabel>
</CustomObject>