FLY wire David/force-app/main/default/objects/Quote_Line_Rollup_Field_Mapping__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>API name of field</description>
    <inlineHelpText>API name of field</inlineHelpText>
    <label>Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>