FLY wire David/force-app/main/default/objects/Quote_Line_Rollup_Field_Mapping__mdt/fields/Rollup_Field__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Field__c</fullName>
    <description>API name of average field</description>
    <inlineHelpText>API name of average field</inlineHelpText>
    <label>Rollup Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>