FLY wire David/force-app/main/default/objects/Quote_Line_Rollup_Field_Mapping__mdt/fields/Type_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Operation__c</fullName>
    <label>Type of Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average</fullName>
                <default>true</default>
                <label>Average</label>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>